# gamedevbench-mcp

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml  seeles-test-service-account.json
game_mcp_server/: .gitignore  Dockerfile  README.md  config.py  port_discovery.py  pyproject.toml  pyrightconfig.json  server.py  server_deploy.py  server_logic.py  server_sse.py  server_start_config.py  server_streamable_http.py  server_subagent_blender.py  server_threejs_streamablehttp.py
game_mcp_server/.github/scripts/: git-push.sh
game_mcp_server/.github/workflows/: blender-mcp-server-deploy.yml  bump-version.yml  claude-nl-suite.yml  test.yml  threejs-mcp-server-deploy.yml  unity-mcp-server-deploy.yml
game_mcp_server/async_http/: async_callback_handler.py  base_http_handler.py  http_register_manager.py
game_mcp_server/connection/: blender_connection_local.py  blender_connection_remote_delegate.py  connection_interface.py  connection_provider.py  connection_remote_delegate.py  unity_connection_local.py  unity_http_connection.py
game_mcp_server/http_logic/: entity.py  http_register.py  remix_handler.py
game_mcp_server/llm/: llm_prompt.py  open_ai_helper.py  openai_config.py
game_mcp_server/remote_config/: __init__.py  env.py  loader.py  nacos_client.py  provider.py  registry.py
game_mcp_server/remote_config/schemas/: __init__.py  ad_integration_sdk_usage_config.py  base.py  base_type_config.py  dify_config.py  motion_rewrite_prompt_config.py  sprite_player_sdk_usage_config.py  tool_prompt_config.py
game_mcp_server/scripts/: run_full_flow.py  upload_template_zip.py
game_mcp_server/tools/: __init__.py  execute_menu_item.py  get_screenshot.py  import_external_asset.py  manage_asset.py  manage_editor.py  manage_gameobject.py  manage_image.py  manage_scene.py  manage_script.py  manage_seele_asset.py  manage_shader.py  prompt_process.py  read_console.py  resource_tools.py  seele_game_tool.py  task_tool.py
game_mcp_server/tools/blender/: blender_tools.py
game_mcp_server/tools/threejs_tools/: __init__.py  ad_integration.py  convert_s3_file_url.py  create_script.py  delete_script.py  grep_script.py  list_script.py  task_tool.py  (+12 more)
game_mcp_server/util/: aiohttp_util.py  asset_report.py  asset_util.py  context_util.py  context_util.py.bak_20260319_0709  deploy_template.py  dify_client.py  env_client.py  env_client.py.bak_20260319_0805  fuzzy_replace.py  invoke_llm_util.py  log_collection.py  logging_context.py  mcp_util.py  metrics.py  mock.py  report_util.py  s3_util.py  threejs_utils.py
(+53 files in other folders)
