[project]
name = "MCPForGameServer"
version = "1.6.0"
description = "MCP server for game editing and generation supporting Unity and Three.js via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests>=2.31.0",
    "mcp[cli]>=1.17.0",
    "requires",
    "config>=0.5.1",
    "aiohttp>=3.12.15",
    "logging>=0.4.9.6",
    "boto3>=1.40.31",
    "aioboto3>=12.3.0",
    "openai>=1.109.0",
    "orjson>=3.10.0",
    "pydantic>=2.8.0",
    "python-http-cuda-rpc",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "nacos-sdk-python==2.0.9",
    "fastapi==0.127.0",
    "tenacity<=9.1.2",
    "sse-starlette==3.0.4",
    "typer==0.20.1",
    "playwright>=1.54.0",
    "apscheduler>=3.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "server", "server_deploy"]
packages = ["tools", "util", "util.schedule", "util.schedule.jobs", "connection", "llm", "remote_config", "remote_config.schemas", "http_logic"]

[tool.uv.sources]
python-http-cuda-rpc = { url = "https://seelemodel.oss-cn-hangzhou.aliyuncs.com/model/python_http_cuda_rpc/python_http_cuda_rpc-1.0.146-py3-none-any.whl" }
